--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
   </head>
   <body class="bg-zinc-950 text-zinc-100">
     <a href="#main" class="sr-only focus:not-sr-only focus:absolute focus:top-2 focus:left-2 bg-zinc-800 text-white px-3 py-2 rounded">Skip to content</a>
+    <!-- Hidden Netlify form for build-time detection -->
+    <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="text" name="subject" />
+      <textarea name="message"></textarea>
+    </form>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script>
