--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -18,18 +18,28 @@
           // If the OAuth function redirected back without a popup, it appends a hash like
           // #authorization:github:success:{"token":"..."}
           if (location.hash && location.hash.startsWith('#authorization:github:')) {
-            // Forward to the CMS app as if it came from postMessage
-            if (window.parent && window.parent !== window && window.parent.postMessage) {
-              window.parent.postMessage(location.hash.slice(1), '*');
-            } else if (window.postMessage) {
-              window.postMessage(location.hash.slice(1), '*');
-            }
+            // Stash it so we can resend after CMS attaches its message listener
+            sessionStorage.setItem('decap-cms-oauth', location.hash.slice(1));
             // Clear the hash to avoid re-processing on reload
             history.replaceState(null, '', location.pathname);
           }
         } catch (_) {}
 
         if (window.CMS) window.CMS.init({ configPath: '/admin/config.yml' });
+
+        // After init, re-post the stashed oauth message so CMS can consume it
+        (function repostOAuthMessage(retries) {
+          var msg = null;
+          try { msg = sessionStorage.getItem('decap-cms-oauth'); } catch (_) {}
+          if (msg) {
+            try { window.postMessage(msg, '*'); } catch (_) {}
+            try { sessionStorage.removeItem('decap-cms-oauth'); } catch (_) {}
+            return; // done
+          }
+          if (retries > 0) {
+            setTimeout(function(){ repostOAuthMessage(retries - 1); }, 150);
+          }
+        })(20); // retry for ~3 seconds
       });
     </script>
   </body>
